--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "functions": {
-    "api/*.php": {
+    "api/*/.php": {
       "runtime": "vercel-php@0.7.3"
     }
-  }
+  },
+  "routes": [
+    { "src": "/(.*)",  "dest": "/api/index.php" },
+    { "src": "/api/style.css", "dest": "/api/style.css" }]
 }
