--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
     }
   },
   "routes": [
-    { "src": "/index.php",  "dest": "/api/index.php" },
+    { "src": "/",  "dest": "/api/index.php" },
     { "src": "css/style.css", "dest": "/css/style.css" }]
 }
